src/snapshots/pbsql__tql_validator__tests__insert.snap
---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Ok: ~
- - "INSERT INTO \"~/books/matches\" (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
  - "VALUES (?, ?, DATETIME('now'), CURRENT_TIMESTAMP)"
