src/snapshots/pbsql__tql_validator__tests__on_conflict_do_nothing.snap
---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Ok: ~
- - "insert into \"~/my-data-scraper/reelgood/shows-and-movies\""
  - "(\"format\", \"isWatched\", \"name\", \"url\", \"imageUrl\")"
  - "values (?, ?, ?, ?, ?)"
  - on conflict do nothing
