src/snapshots/pbsql__tql_validator__tests__select_wildcard.snap
---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Ok: ~
- - "select * from \"~/heyy\""
