src/snapshots/pbsql__tql_validator__tests__union_separate_scopes.snap
---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Ok: ~
- - "select \"~/books/things\".id, \"~/books/things\".title"
  - "from \"~/books/non-things\" as \"~/books/things\""
  - ""
  - union
  - ""
  - "select \"~/books/things\".id, \"~/books/things\".title"
  - "from \"~/books/things\""
